--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+.app {
+  padding: 30ox;
+  background-color: floralwhite;
+}
+
+.todo {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  justify-content: space-between;
+}
